Finish HTML Static GUI

--- a/rGallery_html/index.html
+++ b/rGallery_html/index.html
@@ -11,6 +11,7 @@
 
     <!-- Custom styles for this template -->
     <link href="css/style.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/lightbox.css">
   </head>
 
   <body>
@@ -50,21 +51,20 @@
           <div class="row">
             <div class="col-md-3">
               <div class="photo photo-type-line">
-                <a href="img/bw1.jpg" class="photo-hover">
+                <a href="img/bw1.jpg" class="photo-hover" data-lightbox="my-images" data-title="Lorem Ipsum">
                   <div class="photo-info">
                     <div class="headline">Lorem Ipsum</div>
                     <div class="line"></div>
-                    <div class="desc">Lorem Ipsum es simplemente el texto de relleno de las imprentas y
-                      archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500</div>
-                    <div class="mask"></div>
+                    <div class="desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed faucibus faucibus mi ut lobortis</div>
                   </div>
+                  <div class="mask"></div>
                 </a>
                 <div class="photo-img"><img src="img/bw1.jpg"></div>
               </div>
             </div>
             <div class="col-md-3">
               <div class="photo photo-type-line">
-                <a href="img/bw2.jpg" class="photo-hover">
+                <a href="img/bw2.jpg" class="photo-hover" data-lightbox="my-images" data-title="Lorem Ipsum">
                   <div class="photo-info">
                     <div class="headline">Lorem Ipsum</div>
                     <div class="line"></div>
@@ -78,7 +78,7 @@
             </div>
             <div class="col-md-3">
               <div class="photo photo-type-line">
-                <a href="img/bw3.jpg" class="photo-hover">
+                <a href="img/bw3.jpg" class="photo-hover" data-lightbox="my-images" data-title="Lorem Ipsum">
                   <div class="photo-info">
                     <div class="headline">Lorem Ipsum</div>
                     <div class="line"></div>
@@ -92,7 +92,7 @@
             </div>
             <div class="col-md-3">
               <div class="photo photo-type-line">
-                <a href="img/bw4.jpg" class="photo-hover">
+                <a href="img/bw4.jpg" class="photo-hover" data-lightbox="my-images" data-title="Lorem Ipsum">
                   <div class="photo-info">
                     <div class="headline">Lorem Ipsum</div>
                     <div class="line"></div>
@@ -108,7 +108,7 @@
           <div class="row">
             <div class="col-md-3">
               <div class="photo photo-type-line">
-                <a href="img/bw1.jpg" class="photo-hover">
+                <a href="img/bw5.jpg" class="photo-hover" data-lightbox="my-images" data-title="Lorem Ipsum">
                   <div class="photo-info">
                     <div class="headline">Lorem Ipsum</div>
                     <div class="line"></div>
@@ -117,12 +117,12 @@
                     <div class="mask"></div>
                   </div>
                 </a>
-                <div class="photo-img"><img src="img/bw1.jpg"></div>
+                <div class="photo-img"><img src="img/bw5.jpg"></div>
               </div>
             </div>
             <div class="col-md-3">
               <div class="photo photo-type-line">
-                <a href="img/bw2.jpg" class="photo-hover">
+                <a href="img/bw6.jpg" class="photo-hover" data-lightbox="my-images" data-title="Lorem Ipsum">
                   <div class="photo-info">
                     <div class="headline">Lorem Ipsum</div>
                     <div class="line"></div>
@@ -131,12 +131,12 @@
                     <div class="mask"></div>
                   </div>
                 </a>
-                <div class="photo-img"><img src="img/bw2.jpg"></div>
+                <div class="photo-img"><img src="img/bw6.jpg"></div>
               </div>
             </div>
             <div class="col-md-3">
               <div class="photo photo-type-line">
-                <a href="img/bw3.jpg" class="photo-hover">
+                <a href="img/bw7.jpg" class="photo-hover" data-lightbox="my-images" data-title="Lorem Ipsum">
                   <div class="photo-info">
                     <div class="headline">Lorem Ipsum</div>
                     <div class="line"></div>
@@ -145,12 +145,12 @@
                     <div class="mask"></div>
                   </div>
                 </a>
-                <div class="photo-img"><img src="img/bw3.jpg"></div>
+                <div class="photo-img"><img src="img/bw7.jpg"></div>
               </div>
             </div>
             <div class="col-md-3">
               <div class="photo photo-type-line">
-                <a href="img/bw4.jpg" class="photo-hover">
+                <a href="img/bw8.jpg" class="photo-hover" data-lightbox="my-images" data-title="Lorem Ipsum">
                   <div class="photo-info">
                     <div class="headline">Lorem Ipsum</div>
                     <div class="line"></div>
@@ -159,72 +159,14 @@
                     <div class="mask"></div>
                   </div>
                 </a>
-                <div class="photo-img"><img src="img/bw4.jpg"></div>
-              </div>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-md-3">
-              <div class="photo photo-type-line">
-                <a href="img/bw1.jpg" class="photo-hover">
-                  <div class="photo-info">
-                    <div class="headline">Lorem Ipsum</div>
-                    <div class="line"></div>
-                    <div class="desc">Lorem Ipsum es simplemente el texto de relleno de las imprentas y
-                      archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500</div>
-                    <div class="mask"></div>
-                  </div>
-                </a>
-                <div class="photo-img"><img src="img/bw1.jpg"></div>
-              </div>
-            </div>
-            <div class="col-md-3">
-              <div class="photo photo-type-line">
-                <a href="img/bw1.jpg" class="photo-hover">
-                  <div class="photo-info">
-                    <div class="headline">Lorem Ipsum</div>
-                    <div class="line"></div>
-                    <div class="desc">Lorem Ipsum es simplemente el texto de relleno de las imprentas y
-                      archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500</div>
-                    <div class="mask"></div>
-                  </div>
-                </a>
-                <div class="photo-img"><img src="img/bw1.jpg"></div>
-              </div>
-            </div>
-            <div class="col-md-3">
-              <div class="photo photo-type-line">
-                <a href="img/bw1.jpg" class="photo-hover">
-                  <div class="photo-info">
-                    <div class="headline">Lorem Ipsum</div>
-                    <div class="line"></div>
-                    <div class="desc">Lorem Ipsum es simplemente el texto de relleno de las imprentas y
-                      archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500</div>
-                    <div class="mask"></div>
-                  </div>
-                </a>
-                <div class="photo-img"><img src="img/bw1.jpg"></div>
-              </div>
-            </div>
-            <div class="col-md-3">
-              <div class="photo photo-type-line">
-                <a href="img/bw1.jpg" class="photo-hover">
-                  <div class="photo-info">
-                    <div class="headline">Lorem Ipsum</div>
-                    <div class="line"></div>
-                    <div class="desc">Lorem Ipsum es simplemente el texto de relleno de las imprentas y
-                      archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500</div>
-                    <div class="mask"></div>
-                  </div>
-                </a>
-                <div class="photo-img"><img src="img/bw1.jpg"></div>
+                <div class="photo-img"><img src="img/bw8.jpg"></div>
               </div>
             </div>
           </div>
           <div class="row">
             <div class="col-md-3">
               <div class="photo photo-type-line">
-                <a href="img/bw1.jpg" class="photo-hover">
+                <a href="img/bw9.jpg" class="photo-hover" data-lightbox="my-images" data-title="Lorem Ipsum">
                   <div class="photo-info">
                     <div class="headline">Lorem Ipsum</div>
                     <div class="line"></div>
@@ -233,12 +175,12 @@
                     <div class="mask"></div>
                   </div>
                 </a>
-                <div class="photo-img"><img src="img/bw1.jpg"></div>
+                <div class="photo-img"><img src="img/bw9.jpg"></div>
               </div>
             </div>
             <div class="col-md-3">
               <div class="photo photo-type-line">
-                <a href="img/bw1.jpg" class="photo-hover">
+                <a href="img/bw10.jpg" class="photo-hover" data-lightbox="my-images" data-title="Lorem Ipsum">
                   <div class="photo-info">
                     <div class="headline">Lorem Ipsum</div>
                     <div class="line"></div>
@@ -247,12 +189,12 @@
                     <div class="mask"></div>
                   </div>
                 </a>
-                <div class="photo-img"><img src="img/bw1.jpg"></div>
+                <div class="photo-img"><img src="img/bw10.jpg"></div>
               </div>
             </div>
             <div class="col-md-3">
               <div class="photo photo-type-line">
-                <a href="img/bw1.jpg" class="photo-hover">
+                <a href="img/bw11.jpg" class="photo-hover" data-lightbox="my-images" data-title="Lorem Ipsum">
                   <div class="photo-info">
                     <div class="headline">Lorem Ipsum</div>
                     <div class="line"></div>
@@ -261,12 +203,12 @@
                     <div class="mask"></div>
                   </div>
                 </a>
-                <div class="photo-img"><img src="img/bw1.jpg"></div>
+                <div class="photo-img"><img src="img/bw11.jpg"></div>
               </div>
             </div>
             <div class="col-md-3">
               <div class="photo photo-type-line">
-                <a href="img/bw1.jpg" class="photo-hover">
+                <a href="img/bw12.jpg" class="photo-hover" data-lightbox="my-images" data-title="Lorem Ipsum">
                   <div class="photo-info">
                     <div class="headline">Lorem Ipsum</div>
                     <div class="line"></div>
@@ -275,7 +217,65 @@
                     <div class="mask"></div>
                   </div>
                 </a>
-                <div class="photo-img"><img src="img/bw1.jpg"></div>
+                <div class="photo-img"><img src="img/bw12.jpg"></div>
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-3">
+              <div class="photo photo-type-line">
+                <a href="img/bw13.jpg" class="photo-hover" data-lightbox="my-images" data-title="Lorem Ipsum">
+                  <div class="photo-info">
+                    <div class="headline">Lorem Ipsum</div>
+                    <div class="line"></div>
+                    <div class="desc">Lorem Ipsum es simplemente el texto de relleno de las imprentas y
+                      archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500</div>
+                    <div class="mask"></div>
+                  </div>
+                </a>
+                <div class="photo-img"><img src="img/bw13.jpg"></div>
+              </div>
+            </div>
+            <div class="col-md-3">
+              <div class="photo photo-type-line">
+                <a href="img/bw14.jpg" class="photo-hover" data-lightbox="my-images" data-title="Lorem Ipsum">
+                  <div class="photo-info">
+                    <div class="headline">Lorem Ipsum</div>
+                    <div class="line"></div>
+                    <div class="desc">Lorem Ipsum es simplemente el texto de relleno de las imprentas y
+                      archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500</div>
+                    <div class="mask"></div>
+                  </div>
+                </a>
+                <div class="photo-img"><img src="img/bw14.jpg"></div>
+              </div>
+            </div>
+            <div class="col-md-3">
+              <div class="photo photo-type-line">
+                <a href="img/bw15.jpg" class="photo-hover" data-lightbox="my-images" data-title="Lorem Ipsum">
+                  <div class="photo-info">
+                    <div class="headline">Lorem Ipsum</div>
+                    <div class="line"></div>
+                    <div class="desc">Lorem Ipsum es simplemente el texto de relleno de las imprentas y
+                      archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500</div>
+                    <div class="mask"></div>
+                  </div>
+                </a>
+                <div class="photo-img"><img src="img/bw15.jpg"></div>
+              </div>
+            </div>
+            <div class="col-md-3">
+              <div class="photo photo-type-line">
+                <a href="img/bw16.jpg" class="photo-hover" data-lightbox="my-images" data-title="Lorem Ipsum">
+                  <div class="photo-info">
+                    <div class="headline">Lorem Ipsum</div>
+                    <div class="line"></div>
+                    <div class="desc">Lorem Ipsum es simplemente el texto de relleno de las imprentas y
+                      archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500</div>
+                    <div class="mask"></div>
+                  </div>
+                </a>
+                <div class="photo-img"><img src="img/bw16.jpg"></div>
               </div>
             </div>
           </div>
@@ -289,7 +289,8 @@
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="js/bootstrap.js"></script>
+    <script src="js/lightbox.js"></script>
   </body>
 </html>
